added content and pictures

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="relative bg-cover bg-center h-screen animate-element" style="background-image: url('assets/_pictures/trees-975091.jpg');">
 <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative z-10 flex flex-col justify-center items-center h-full text-center px-4">
-            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6">Ihr Weg zum Jagdschein – geführt von Fachleuten.</h1>
-            <p class="text-xl md:text-2xl text-white mb-8 max-w-2xl">Zum "grünem Abitur" mit Jagdschule Frühauf</p>
+            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6">Ihr Weg zum Jagdschein – geführt von Fachexperten.</h1>
+            <p class="text-xl md:text-2xl text-white mb-8 max-w-2xl">"Wer erfolgreich Jagen will muss "Frühauf"-stehen" ~ alte Jägerweisheit</p>
             <div class="flex flex-col sm:flex-row gap-4">
                                 <a href="#courses" class="bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-3 px-6 rounded-lg transition duration-300">Unsere Kurse</a>
                                 <a href="#story" class="bg-[#D6BD98] hover:bg-[#c9af7f] text-[#1A3636] font-bold py-3 px-6 rounded-lg transition duration-300">Erfahrungsberichte</a>
@@ -142,25 +142,25 @@
     <!-- Student Story Section -->
     <section id="story" class="py-20 px-4">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">A Student's Journey</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Ein Erfahrungsbericht</h2>
             <div class="bg-white rounded-xl shadow-xl overflow-hidden">
-                <img src="http://static.photos/outdoor/1200x630/5" alt="Student experience" class="w-full h-96 object-cover">
+                <img src="assets/_pictures/P1010109.jpeg" alt="Student experience" class="w-full h-96 object-cover">
                 <div class="p-8 md:p-12">
-                    <h3 class="text-2xl font-bold mb-6 text-gray-800">From Novice to Master Hunter</h3>
+                    <h3 class="text-2xl font-bold mb-6 text-gray-800">Die Ausbildung in unserer Jagdschule</h3>
                     <blockquote class="text-lg italic text-gray-600 mb-8 border-l-4 border-amber-700 pl-6">
-                        "When I first came to Jagdschule Frühauf, I could barely tell a deer track from a rabbit's. After just six months with their instructors, I successfully hunted my first stag under their expert guidance."
+                        "Als ich meine Ausbildung begann"
                     </blockquote>
                     <div class="flex items-center gap-4">
-                        <img src="http://static.photos/people/200x200/1" alt="Michael Schmidt" class="w-16 h-16 rounded-full object-cover">
+                        <img src="assets/_pictures/Jonas_Kahle.jpeg" alt="Michael Schmidt" class="w-16 h-16 rounded-full object-cover">
                         <div>
-                            <h4 class="font-bold text-gray-800">Michael Schmidt</h4>
-                            <p class="text-gray-600">Graduate, Class of 2022</p>
+                            <h4 class="font-bold text-gray-800">Jonas Kahle</h4>
+                            <p class="text-gray-600">Jagdschüler, Jagdkurs Winter 2024</p>
                         </div>
                     </div>
                     <div class="mt-8">
-                        <p class="text-gray-600 mb-4">Michael's journey began with our Basic Hunter Certification course. He shares how the comprehensive approach at Jagdschule Frühauf gave him confidence in the field:</p>
-                        <p class="text-gray-600 mb-4">"What sets this school apart is the attention to detail. Instructor Frühauf spent hours with me perfecting my shooting stance, while Frau Bergmann's wildlife biology classes transformed how I interact with nature."</p>
-                        <p class="text-gray-600">"The field survival training with Herr Vogel was intense but invaluable. I recently spent three days alone in the Bavarian Forest using only what I learned here."</p>
+                        <p class="text-gray-600 mb-4">Jonas Reise begann mit unserem Winter Schnellkurs im Jahr 2024. Er erzählt euch wie die Ausbildung von unseren professionellen Dozenten Sicherheit und entsprechendes Wissen in der jagdlichen Praxis vermittelte:</p>
+                        <p class="text-gray-600 mb-4">"Was diese Jagdschule von anderen Unterscheidet ist das Auge fürs Detail. Marko hat mit uns Stunden auf dem Schießstand verbracht und hierbei auf alles geachtet von der Atmung bis hin zum richtigen Stand."</p>
+                        <p class="text-gray-600">"Auch in den Theoriestunden ist mehr als nur das übliche Lehrbuchwissen vermittelt worden. Andreas und Silvio konnten uns aufgrund ihrer beruflichen Erfahrung wesentlich tiefere Einblicke in das Waidwerken gewähren, als es ein Lehrbuch je könnte."</p>
                     </div>
                 </div>
             </div>
@@ -174,34 +174,45 @@
                 <!-- Course 1 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden w-full md:w-1/2 max-w-md">
                     <div class="bg-[#40534C] text-white p-4 text-center">
-                        <h3 class="text-xl font-bold">Basic Hunter Certification</h3>
+                        <h3 class="text-xl font-bold">Gruppenkurs</h3>
                     </div>
-                    <img src="http://static.photos/outdoor/640x360/1" alt="Basic Hunter Course" class="w-full h-48 object-cover">
+                    <img src="assets/_pictures/P1010123.jpeg" alt="Basic Hunter Course" class="w-full h-48 object-cover">
                     <div class="p-6 flex flex-col h-full">
-                        <p class="text-gray-600 mb-4">8-week comprehensive introduction to hunting</p>
+                        <p class="text-gray-600 mb-4">Eine Woche intensives lernen + 5 Wochenenden</p>
+                        <p class="text-black-600 mb-4">Im Kurspreis enthalten:</p>
                         <ul class="space-y-2 mb-4">
-<li class="flex items-center">
+                        <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Firearms safety</span>
+                                <span>Kursgebühr, inklusive Kostenpauschale</span>
                             </li>
                             <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Wildlife identification</span>
+                                <span>Nutzung des Lehrreviers, Präparate und andere Lehrmittel</span>
                             </li>
                             <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Basic tracking</span>
+                                <span>ausführliches Lehrmaterial  ; Print sowie t.w. digitaler Form</span>
+                            </li>
+                            <li class="flex items-center">
+                                <i data-feather="check" class="text-amber-700 mr-2"></i>
+                                <span>Schießstandgebühren & Munition</span>
+                            </li>
+                            <li class="flex items-center">
+                                <i data-feather="check" class="text-amber-700 mr-2"></i>
+                                <span>Nutzung von modernen Leih- bzw. Ausbildungswaffen</span>
+                            </li>
+                            <li class="flex items-center">
+                                <i data-feather="check" class="text-amber-700 mr-2"></i>
+                                <span>Kaffee & Tee während der Ausbildung</span>
                             </li>
                         </ul>
-                        <p class="text-2xl font-bold mb-2 text-center">€1,200</p>
+                        <p class="text-2xl font-bold mb-2 text-center">€2.900</p>
                         <div class="text-center mb-4">
-                            <a href="/basic-course.html" class="inline-block text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300">View Full Details</a>
+                            <a href="/basic-course.html" class="inline-block text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300">Termine & Details</a>
                         </div>
                     <div class="mt-auto">
                         <div class="flex flex-col sm:flex-row gap-4">
-                            <a href="/basic-course.html" class="inline-block bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Enroll Now</a>
-                            <a href="/basic-course.html" class="inline-block border-2 border-[#40534C] text-[#40534C] hover:bg-[#40534C] hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Course Details</a>
-                            <a href="/enrollment-form.pdf" class="inline-block border-2 border-[#40534C] text-[#40534C] hover:bg-[#40534C] hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center" download>Download Form</a>
+                            <a href="/basic-course.html" class="inline-block bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Melde dich jetzt an!</a>
                         </div>
 </div>
 </div>
@@ -209,33 +220,32 @@
                 <!-- Course 2 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden w-full md:w-1/2 max-w-md">
                     <div class="bg-black text-white p-4 text-center">
-                        <h3 class="text-xl font-bold">Advanced Marksmanship</h3>
+                        <h3 class="text-xl font-bold">Individualkurs</h3>
                     </div>
-<img src="http://static.photos/outdoor/640x360/2" alt="Advanced Marksmanship Course" class="w-full h-48 object-cover">
+<img src="assets/_pictures/IMG_7765.jpg" alt="Advanced Marksmanship Course" class="w-full h-48 object-cover">
                     <div class="p-6 flex flex-col h-full">
-                        <p class="text-gray-600 mb-4">4-week intensive shooting program</p>
+                        <p class="text-gray-600 mb-4">Die Zeiten sind individuell auf dich abgestimmt!</p>
                         <ul class="space-y-2 mb-4">
 <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Long-range shooting</span>
+                                <span>alle Vorteile aus dem Gruppenkurs</span>
                             </li>
                             <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Ballistics calculation</span>
+                                <span>individuelles schulen nach deinen Bedürfnissen</span>
                             </li>
                             <li class="flex items-center">
                                 <i data-feather="check" class="text-amber-700 mr-2"></i>
-                                <span>Adverse conditions</span>
+                                <span>zeitliches Einteilen nach deinem Belieben</span>
                             </li>
                         </ul>
-                        <p class="text-2xl font-bold mb-2 text-center">€900</p>
+                        <p class="text-2xl font-bold mb-2 text-center">Preis auf Anfrage</p>
                         <div class="text-center mb-4">
-                            <a href="/advanced-course.html" class="inline-block text-sm bg-black hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg transition duration-300">View Full Details</a>
+                            <a href="/advanced-course.html" class="inline-block text-sm bg-black hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg transition duration-300">Alle Details</a>
                         </div>
                         <div class="mt-auto">
                             <div class="flex flex-col sm:flex-row gap-4">
-                                <a href="/basic-course.html" class="inline-block bg-black hover:bg-gray-800 text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Enroll Now</a>
-                                <a href="/advanced-course.html" class="inline-block border-2 border-black text-black hover:bg-black hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Course Details</a>
+                                <a href="/basic-course.html" class="inline-block bg-black hover:bg-gray-800 text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Kontaktiere uns!</a>
                             </div>
 </div>
 </div>
@@ -246,48 +256,47 @@
     <!-- Hunting Grounds Section -->
     <section id="hunting-grounds" class="py-20 bg-[#1A3636] px-4 text-white">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Our Exclusive Hunting Grounds</h2>
-            <p class="text-xl text-center max-w-3xl mx-auto mb-16 text-[#D6BD98]">Train in authentic environments across diverse terrains and wildlife habitats</p>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Ein Hochwildrevier direkt vor der Haustür</h2>
+            <p class="text-xl text-center max-w-3xl mx-auto mb-16 text-[#D6BD98]">Lerne die jagdliche praxisw in unserem Lehrrevier</p>
             
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Ground 1 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
-                    <img src="http://static.photos/forest/640x360/1" alt="Bavarian Forest" class="w-full h-48 object-cover">
+                    <img src="assets/_pictures/Revier_Rappelsdorf.jpg" alt="Bavarian Forest" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-bold mb-2">Bavarian Forest Reserve</h3>
-                        <p class="text-gray-600 mb-4">Our primary training ground with 5,000 acres of dense woodland, perfect for deer and boar hunting.</p>
+                        <h3 class="text-2xl font-bold mb-2">Thüringer Wald</h3>
+                        <p class="text-gray-600 mb-4">Unser Ausbildungsrevier umfasst eine Fläche von 500 Ha</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Red Deer</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Wild Boar</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Fox</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Rotwild</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Wildschwein</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Fuchs</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Ground 2 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
-                    <img src="http://static.photos/mountain/640x360/1" alt="Alpine Highlands" class="w-full h-48 object-cover">
+                    <img src="assets/_pictures/Feld_Waldfluhr.jpg" alt="Alpine Highlands" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-bold mb-2">Alpine Highlands</h3>
-                        <p class="text-gray-600 mb-4">Chamois and ibex territory with challenging elevation changes and spectacular views.</p>
+                        <h3 class="text-2xl font-bold mb-2">Abwechslungsreiche Flur</h3>
+                        <p class="text-gray-600 mb-4">Unterschiedliche Flurstücke sorgen für genügend Lehrmaterial im Hinblick auf Flora & Fauna</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Chamois</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Ibex</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Marmot</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Feldflur</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Waldflur</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Ground 3 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
-                    <img src="http://static.photos/lake/640x360/1" alt="Lake District" class="w-full h-48 object-cover">
+                    <img src="assets/_pictures/alice-triquet-HeEJU3nrg_0-unsplash.jpg" alt="Lake District" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-bold mb-2">Lake District Wetlands</h3>
-                        <p class="text-gray-600 mb-4">Waterfowl and small game habitat with specialized blinds and boat access.</p>
+                        <h3 class="text-2xl font-bold mb-2">Gewässer</h3>
+                        <p class="text-gray-600 mb-4">Steh- und Fließgewässer erweitern die Lehrmöglichkeiten.</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Duck</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Goose</span>
-                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Rabbit</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Stockenten</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Nutrias</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Flora</span>
                         </div>
                     </div>
                 </div>
